# Inventory-System

./: .gitignore  CMakeLists.txt  README.md  main
sql/: schema.sql
src/: main.cpp
